--- a/assets/styles/dark-mode.css
+++ b/assets/styles/dark-mode.css
@@ -14,3 +14,46 @@
 [data-theme="dark"] .bg-black {
   background-color: #eee !important;
 }
+
+[data-theme="dark"] input, [data-theme="dark"] textarea{
+  background-color: #333 !important;
+  color: #fff !important;
+}
+
+
+[data-theme="dark"] .list-group-item {
+  background-color: #333 !important;
+  color: #fff !important;
+  border-color: #28a745 !important;
+}
+
+[data-theme="dark"] .list-group-item a, [data-theme="dark"] td a{
+  text-decoration: none;
+  color: #FFFFFF !important;
+}
+
+[data-theme="dark"] .table-striped tbody tr:nth-of-type(odd) {
+  background-color: #222 !important;
+}
+
+[data-theme="dark"] table.dataTable tbody tr {
+  background-color: #333!important;
+}
+
+[data-theme="dark"] select {
+  background-color: #222 !important;
+  color: #FFFFFF !important;
+}
+
+[data-theme="dark"] .fg-button {
+  background-color: #444 !important;
+  color: #FFFFFF !important;
+}
+
+[data-theme="dark"] table.dataTable thead th.ui-state-default {
+  background-color:#28a745!important;
+  background-image: none !important;
+  color: #FFFFFF !important;
+}
+
+
